--- a/augur/templates/first-time-config.j2
+++ b/augur/templates/first-time-config.j2
@@ -199,6 +199,8 @@
             xhr.setRequestHeader('Content-Type', 'application/json');
             xhr.send(JSON.stringify(config));
 
+            loadingModal.show();
+
             var url;
             if(event.submitter.id == "Exit") {
                 url = "{{ url_for('shutdown') }}";
@@ -206,11 +208,26 @@
                 url = "{{ url_for('shutdown', continue = 'True') }}";
             }
 
-            fetch(url).then(async () => {
-                modal = document.getElementById("modal-title");
-                modal.innerHTML = "Finished"
-                displayError("The first time setup server has been shut down.")
-            })
+            xhr.onreadystatechange = function () {
+                if (xhr.readyState == XMLHttpRequest.DONE) {
+                    if (xhr.status != 200) {
+                        if (xhr.status) {
+                            // The first time setup server returned an error
+                            displayError(xhr.responseText);
+                        } else {
+                            // The first time setup server did not respond
+                            displayError("The first time setup server is unreachable");
+                        }
+                    } else {
+                        // Display a loading indicator while starting up the production server
+                        fetch(url).then(async () => {
+                            modal = document.getElementById("modal-title");
+                            modal.innerHTML = "Finished"
+                            displayError("The first time setup server has been shut down.")
+                        })
+                    }
+                }
+            }
         }
 
 
