Fix tables on user settings page clipping past end of column
Signed-off-by: Ulincsys <ulincsys@gmail.com>

--- a/augur/static/css/stylesheet.css
+++ b/augur/static/css/stylesheet.css
@@ -125,6 +125,10 @@ body {
     overflow: auto;
 }
 
+.display-table th {
+    word-wrap: normal;
+}
+
 .paginationActive {
     background-color: var(--color-accent-dark);
     border-color: var(--color-accent-dark);
