--- a/augur/templates/settings.j2
+++ b/augur/templates/settings.j2
@@ -132,7 +132,7 @@
                                     {"title" : "Favorite"},
                                     {"title" : ""}]
                                     -%}
-                                    <div class="display-table rounded w3-animate-opacity">
+                                    <div class="display-table table-responsive rounded w3-animate-opacity">
                                         <table class="table table-striped table-bordered">
                                             <!-- Table header start -->
                                             <thead>
@@ -219,7 +219,7 @@
                                     {"title" : "Connected"},
                                     {"title" : ""}]
                                     -%}
-                                    <div class="display-table rounded w3-animate-opacity">
+                                    <div class="display-table table-responsive rounded w3-animate-opacity">
                                         <table class="table table-striped table-bordered">
                                             <!-- Table header start -->
                                             <thead>
@@ -258,7 +258,7 @@
                                     {"title" : "Client Secret"},
                                     {"title" : ""}]
                                     -%}
-                                    <div class="display-table rounded w3-animate-opacity">
+                                    <div class="display-table table-responsive rounded w3-animate-opacity">
                                         <table class="table table-striped table-bordered">
                                             <!-- Table header start -->
                                             <thead>
