--- a/augur/templates/settings.j2
+++ b/augur/templates/settings.j2
@@ -198,6 +198,16 @@
                                                 name="add_repo">Add</button>
                                         </div>
                                     </form>
+                                    <p>You can add an organization using the full URL for an organization, like https://github.com/chaoss. Simply entering `chaoss` will also work. 
+                                    <br>
+                                    You can add a repository using the full URL for that repo, like https://github.com/chaoss/augur. Simply entering `chaoss/augur` will also works.
+                                    <br>
+                                    If the repositories already exist in the Augur database you will see them under the group you put them into right away. If data needs to be gathered, you will see the repos listed within one to two hours. 
+                                    <br> 
+                                    Data collection for new repositories is approximately a linear function of how many new repositories you add. 20 new repositories will be fully populated more quickly than 400 new repositories. 
+                                    <br> 
+                                    If you encounter any issues loading new repositories, please open an issue at https://github.com/chaoss/augur/issues 
+                                    </p>
                                 </div>
                             </div>
                         </div>
