--- a/augur/templates/settings.j2
+++ b/augur/templates/settings.j2
@@ -202,7 +202,7 @@
                                     <br/>
                                     Data collection for new repositories is approximately a linear function of how many new repositories you add. 20 new repositories will be fully populated more quickly than 400 new repositories. <blockquote>Allow 24 hours to see all newly added repositories listed</blockquote>
                                     <br/> 
-                                    If you encounter any issues loading new repositories, please open an issue at <href a='https://github.com/chaoss/augur/issues'></href> 
+                                    If you encounter any issues loading new repositories, please open an issue at <a href='https://github.com/chaoss/augur/issues'>https://github.com/chaoss/augur/issues</a> 
                                     </p>
                                 </div>
                             </div>
