--- a/augur/templates/settings.j2
+++ b/augur/templates/settings.j2
@@ -200,7 +200,7 @@
                                     </form>
                                     <p>
                                     <br/>
-                                    Data collection for new repositories is approximately a linear function of how many new repositories you add. 20 new repositories will be fully populated more quickly than 400 new repositories. <blockquote>Allow 24 hours to see all newly added repositories listed</blockquote>
+                                    Augur collects data faster than comparable tools, though 20 new repositories will be fully populated more quickly than 400 new repositories. <blockquote>Allow 24 hours to see all newly added repositories listed. If you add repositories Augur already has collected data for (i.e., another user), you will see that data right away.</blockquote>
                                     <br/> 
                                     If you encounter any issues loading new repositories, please open an issue at <a href='https://github.com/chaoss/augur/issues'>https://github.com/chaoss/augur/issues</a> 
                                     </p>
