--- a/augur/templates/settings.j2
+++ b/augur/templates/settings.j2
@@ -201,9 +201,10 @@
                                     <p>
                                     <br/>
                                     <blockquote>Augur collects data faster than comparable tools, though 20 new repositories will be fully populated more quickly than 400 new repositories.</blockquote> 
-                                    <blockquote>Allow 24 hours to see all newly added repositories listed. If you add repositories Augur already has collected data for (i.e., another user), you will see that data right away.</blockquote>
-                                    <br/> 
+                                    <blockquote>Allow 24 hours to see all newly added repositories listed. If you add repositories or organizations already available in this instance of Augur, you will see that data for your user right away.</blockquote>
+                                    <blockquote>
                                     If you encounter any issues loading new repositories, please open an issue at <a href='https://github.com/chaoss/augur/issues'>https://github.com/chaoss/augur/issues</a> 
+                                    </blockquote>
                                     </p>
                                 </div>
                             </div>
