--- a/augur/templates/settings.j2
+++ b/augur/templates/settings.j2
@@ -200,6 +200,7 @@
                                     </form>
                                     <p>
                                     <br/>
+                                    <h3>What to Expect When You Are Expecting New Data</h3>
                                     <blockquote>Augur collects data faster than comparable tools, though 20 new repositories will be fully populated more quickly than 400 new repositories.</blockquote> 
                                     <blockquote>Allow 24 hours to see all newly added repositories listed. If you add repositories or organizations already available in this instance of Augur, you will see that data for your user right away.</blockquote>
                                     <blockquote>
