--- a/augur/templates/settings.j2
+++ b/augur/templates/settings.j2
@@ -201,7 +201,9 @@
                                     <p>
                                     <br/>
                                     <h3>What to Expect When You Are Expecting New Data</h3>
-                                     <img src="../static/img/swiftjet.png" alt="A Fast Jet"> 
+                                        <div class="brand-logo">
+                                            <img src="{{ url_for('static', filename='img/tswiftjet.png')}}" alt="A Swift Jet">
+                                        </div> 
                                     <blockquote>Augur collects data faster than comparable tools, though 20 new repositories will be fully populated more quickly than 400 new repositories.</blockquote> 
                                     <blockquote>Allow 24 hours to see all newly added repositories listed. If you add repositories or organizations already available in this instance of Augur, you will see that data for your user right away. <p style="color: yellow">If some repositories in a group already exist, you will see a number other than "0" in the "Number of repos" column of your repo groups list. Counts for newly added repositories are updated nightly.</p></blockquote>
                                     <blockquote>
