--- a/augur/templates/settings.j2
+++ b/augur/templates/settings.j2
@@ -201,7 +201,7 @@
                                     <p>
                                     <br/>
                                     <h3>What to Expect When You Are Expecting New Data</h3>
-                                        <div class="brand-logo">
+                                        <div class="brand-logo" style="text-align: center;">
                                             <img src="{{ url_for('static', filename='img/tswiftjet.png')}}" alt="A Swift Jet">
                                         </div> 
                                     <blockquote>Augur collects data faster than comparable tools, though 20 new repositories will be fully populated more quickly than 400 new repositories.</blockquote> 
