--- a/augur/static/css/stylesheet.css
+++ b/augur/static/css/stylesheet.css
@@ -161,6 +161,20 @@ body {
     color: var(--color-link);
 }
 
+.circle-opaque {
+    border-radius: 50%;          /* Make it a circle */
+    display: inline-block;       
+    position: absolute;          /* Able to position it, overlaying the other image */
+    left:0px;                    /* Customise the position, but make sure it */
+    top:0px;                     /* is the same as .circle-transparent */
+    z-index: -1;                 /* Makes the image sit *behind* .circle-transparent */
+}
+
+.circle-opaque img {
+    border-radius: 50%;          /* Make it a circle */
+    z-index: -1;
+}
+
 /* Login Page */
 
 #registration-div {
@@ -375,15 +389,6 @@ img[id^="report_image_"]:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.circle-opaque {
-    border-radius: 50%;          /* Make it a circle */
-    display: inline-block;       
-    position: absolute;          /* Able to position it, overlaying the other image */
-    left:0px;                    /* Customise the position, but make sure it */
-    top:0px;                     /* is the same as .circle-transparent */
-    z-index: -1;                 /* Makes the image sit *behind* .circle-transparent */
 }
 
 @-webkit-keyframes rotator {
