--- a/augur/static/css/dashboard.css
+++ b/augur/static/css/dashboard.css
@@ -44,6 +44,20 @@ body {
     color: #bcd0f7;
 }
 
+.circle-opaque {
+    border-radius: 50%;          /* Make it a circle */
+    display: inline-block;       
+    position: absolute;          /* Able to position it, overlaying the other image */
+    left:0px;                    /* Customise the position, but make sure it */
+    top:0px;                     /* is the same as .circle-transparent */
+    z-index: -1;                 /* Makes the image sit *behind* .circle-transparent */
+}
+
+.circle-opaque img {
+    border-radius: 50%;          /* Make it a circle */
+    z-index: -1;
+}
+
 table {
     background-color: var(--color-fg);
     color: var(--color-fg-contrast);
