--- a/augur/templates/settings.j2
+++ b/augur/templates/settings.j2
@@ -204,8 +204,8 @@
                                     <div style="text-align: center;">
                                         <img src="{{ url_for('static', filename='img/tswiftjet.png')}}" alt="A Swift Jet">
                                     </div>
-                                    <blockquote>Augur collects data faster than comparable tools, though 20 new repositories will be fully populated more quickly than 400 new repositories.</blockquote> 
-                                    <blockquote>Allow 24 hours to see all newly added repositories listed. If you add repositories or organizations already available in this instance of Augur, you will see that data for your user right away. <p style="color: yellow">If some repositories in a group already exist, you will see a number other than "0" in the "Number of repos" column of your repo groups list. Counts for newly added repositories are updated nightly.</p></blockquote>
+                                    <blockquote>Augur collects data swiftly and fairly. Users adding 20 new repositories at a go will see core data faster (24 hours) than users adding 4,000 (48 hours).</blockquote> 
+                                    <blockquote>Expect your data in 24 hours. If another user already requested the same repository or organization you did, that data shows up for you immediately. <p style="color: yellow">Meaning, that if some repositories in your group are loved by others, you will see a number other than "0" in the "Number of repos" column of your repo groups list NOW! If you are a repository's first love, group repository counts are updated nightly.</p></blockquote>
                                     <blockquote>
                                     If you encounter any issues loading new repositories, please open an issue at <a href='https://github.com/chaoss/augur/issues'>https://github.com/chaoss/augur/issues</a> 
                                     </blockquote>
