Explicitly identify iconized buttons using role attribute
Signed-off-by: Ulincsys <ulincsys@gmail.com>

--- a/augur/templates/groups-table.j2
+++ b/augur/templates/groups-table.j2
@@ -55,7 +55,7 @@
                     <th scope="row">{{loop.index}}</th>
                     <td><a href="{{ url_for('user_group_view', group=group.name) }}">{{ group.name }}</a></td>
                     <td>{{ group.count }}</td>
-                    <td><i onclick="toggleFavorite(this, '{{ group.name }}')" class="bi {% if group.favorited %} bi-star-fill {% else %} bi-star {% endif %} cursor-pointer"></i></td>
+                    <td><i role="button" onclick="toggleFavorite(this, '{{ group.name }}')" class="bi {% if group.favorited %} bi-star-fill {% else %} bi-star {% endif %} cursor-pointer"></i></td>
                 </tr>
         {% endfor %}
             </tbody>
