--- a/augur/templates/login.j2
+++ b/augur/templates/login.j2
@@ -16,7 +16,7 @@
                     required>
                 <div class="input-group-append">
                     <button class="btn password-toggle" type="button" onclick="togglePass()">
-                        <i class="bi bi-eye-slash" id="togglePassword"></i>
+                        <i role="button" class="bi bi-eye-slash" id="togglePassword"></i>
                     </button>
                 </div>
             </div>
@@ -26,7 +26,7 @@
                         placeholder="Confirm Password">
                     <div class="input-group-append">
                         <button class="btn password-toggle" type="button" onclick="togglePass()">
-                            <i class="bi bi-eye-slash" id="togglePasswordConfirm"></i>
+                            <i role="button" class="bi bi-eye-slash" id="togglePasswordConfirm"></i>
                         </button>
                     </div>
                 </div>
