--- a/augur/templates/settings.j2
+++ b/augur/templates/settings.j2
@@ -204,8 +204,8 @@
                                                                 href="{{ url_for('user_group_view', group=group.name) }}">{{
                                                                 group.name }}</a></th>
                                                         <td>{{ group.repos | length }}</td>
-                                                        <td><i onclick="toggleFavorite(this, '{{ group.name }}')"
-                                                                class="bi {% if group.favorited %} bi-star-fill {% else %} bi-star {% endif %} cursor-pointer"></i>
+                                                        <td><i role="button" onclick="toggleFavorite(this, '{{ group.name }}')"
+                                                                class="bi {% if group.favorited %} bi-star-fill {% else %} bi-star {% endif %}"></i>
                                                         </td>
                                                         <td><button class="btn btn-outline-primary btn-sm"
                                                                 onclick="delgroup(this, '{{ group.name }}')">Delete</button>
